--- a/novaflow/documentacion/index.html
+++ b/novaflow/documentacion/index.html
@@ -10,6 +10,31 @@
     <title>Documentación - NovaFlow | Automatización Inteligente</title>
     <link rel="shortcut icon" href="../favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../assets/css/styles.css">
+
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCKNNldmWRDej0_m2Lonup4SUPjOqKhsh8",
+            authDomain: "novaflow-backend-a84e3.firebaseapp.com",
+            projectId: "novaflow-backend-a84e3",
+            storageBucket: "novaflow-backend-a84e3.firebasestorage.app",
+            messagingSenderId: "531939082742",
+            appId: "1:531939082742:web:8d30bedc41f58eca27c7d7"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+    </script>
+
     <style>
         /* Documentation-specific styles */
         .doc-layout {
@@ -575,7 +600,7 @@
                 </h3>
                 <ol>
                     <li>Descarga la carpeta de la extensión Novaflow: <a class="link-download"
-                            href="../NovaFlow-Beta.zip" download="NovaFlow-Beta.zip">Clic Para Descargar
+                            href="../NovaFlow-Beta.zip" onclick="incrementarDescarga()" download="NovaFlow-Beta.zip">Clic Para Descargar
                             NovaFlow-Beta.zip</a></li>
                     <li>Abre Chrome y accede a <code>chrome://extensions</code>.</li>
                     <li>Activa Modo desarrollador.</li>
@@ -855,6 +880,17 @@
                 }
             });
         });
+    </script>
+
+    <script>
+        function incrementarDescarga() {
+            const ref = db.collection("stats").doc("novaflow");
+
+            return ref.update({
+                downloads: firebase.firestore.FieldValue.increment(1),
+                updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+            });
+        }
     </script>
 
 </body>
